--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
 		<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
 		<link rel="stylesheet" href="style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<title>Decodificador de Texto</title>
 	</head>
 
@@ -16,16 +17,20 @@
 		<main class=“aplicacao”>
 			<section class=“aplicacao__digitacao”>
 				<img src="./img/frame.svg" alt="logo" class="cabecalho__imagem">
-                <textarea name="mensagem" id="mensagem" placeholder="Digite seu texto" required></textarea>
-                <div class=“aplicacao__digitacao__botao”>
+                <div class="caixa__texto">
+				<textarea id="mensagem" placeholder="Digite seu texto com mais de quatro caracteres"></textarea>
+                </div>
+				<div class=“aplicacao__digitacao__botao”>
 					<button onclick="criptografar()" class="aplicacao__digitacao__botao__criptografar">Criptografar</button>
 					<button onclick="descriptografar()" class="aplicacao__digitacao__botao__descriptografar">Descriptografar</button>
 				</div>
 			</section>
             <section class="aplicacao__resultado">
                 <div class="aplicacao__resultado__imagem">
-					<img src="./img/imagemdisplay1.svg" alt="imagem resultado" class="aplicacao__resultado__imagem__figura">
-					<p class="aplicacao__resultado__imagem__texto">
+					<img src="./img/imagemdisplay1.svg" alt="imagem resultado" id="imagem__inicial" class="aplicacao__resultado__imagem__figura">
+				</div>
+				<div class="aplicacao__resultado__texto"></div>
+					<p class="aplicacao__resultado__imagem__texto" id="texto__inicial">
 						Nenhum resultado encontrado
 					</p>					
                 </div>
