--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<button onclick="descriptografar()" class="aplicacao__digitacao__botao__descriptografar">Descriptografar</button>
 				</div>
 			</section>
-            <section class="aplicacao__resultado">
+            <section class="aplicacao__resultado" id="aplicacao__resultado__id">
                 <div class="aplicacao__resultado__imagem">
 					<img src="./img/imagemdisplay1.svg" alt="imagem resultado" id="imagem__inicial" class="aplicacao__resultado__imagem__figura">
 				</div>
@@ -34,6 +34,7 @@
 						Nenhum resultado encontrado
 					</p>					
                 </div>
+				<div class="aplicacao__resultado__botao" id="botao__copiar"></div>
           	</section>		
 		</main>
 		
